--- a/.github/workflows/tweet-new-practice.yml
+++ b/.github/workflows/tweet-new-practice.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   tweet:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04 
     steps:
       - name: checkout
         uses: actions/checkout@v2
