Tell end-to-end-testing not to run if we're only changing github workflow files

--- a/.github/workflows/end-to-end-testing.yaml
+++ b/.github/workflows/end-to-end-testing.yaml
@@ -1,6 +1,13 @@
 name: E2E Tests
 
 on: [pull_request,workflow_dispatch]
+  pull_request:
+    paths-ignore:
+      - ".github/**"
+  workflow_dispatch:
+    paths-ignore:
+      - ".github/**"
+
 
 jobs:
   test:
