--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "netlify-cms-app": "^2.12.24",
     "netlify-cms-media-library-cloudinary": "^1.3.8",
     "netlify-cms-media-library-uploadcare": "^0.5.9",
+    "node-sass": "^6.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
