--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
     "bulma": "^0.9.0",
-    "gatsby": "^2.24.64",
+    "gatsby": "^4.10.1",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-google-analytics": "^2.3.14",
@@ -35,6 +35,7 @@
     "gatsby-transformer-sharp": "^2.5.15",
     "gatsby-transformer-toml": "^2.4.14",
     "hyvor-talk-react": "^1.0.3",
+    "immer": "^9.0.12",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
