--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
     "bulma": "^0.9.0",
-    "gatsby": "^2.24.64",
+    "gatsby": "^3.15.0",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
-    "gatsby-plugin-google-analytics": "^2.3.14",
-    "gatsby-plugin-netlify": "^2.3.15",
-    "gatsby-plugin-netlify-cms": "^4.3.14",
+    "gatsby-plugin-google-analytics": "^3.15.0",
+    "gatsby-plugin-netlify": "^3.13.0-next.0",
+    "gatsby-plugin-netlify-cms": "^5.15.0",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-sass": "^3.2.0",
-    "gatsby-plugin-sharp": "^2.6.36",
-    "gatsby-remark-copy-linked-files": "^2.3.16",
-    "gatsby-remark-images": "^3.3.30",
+    "gatsby-plugin-react-helmet": "^4.15.0",
+    "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-remark-copy-linked-files": "^4.11.0",
+    "gatsby-remark-images": "^5.11.0",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-theme-material-ui": "^1.0.13",
-    "gatsby-transformer-json": "^2.4.12",
-    "gatsby-transformer-remark": "^2.8.35",
-    "gatsby-transformer-sharp": "^2.5.15",
-    "gatsby-transformer-toml": "^2.4.14",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-theme-material-ui": "^4.13.0",
+    "gatsby-transformer-json": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-toml": "^3.14.0",
     "immer": "^9.0.12",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
@@ -47,11 +47,14 @@
     "react-helmet": "^6.0.0",
     "react-image-gallery": "^1.0.8",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-markdown": "^4.3.1",
+    "react-markdown": "^7.1.2",
     "react-share": "^4.3.0",
     "styled-components": "^5.2.0",
     "uuid": "^7.0.0",
     "xmlhttprequest-ssl": "^1.6.2"
+  },
+  "resolutions": {
+    "react-markdown": "^7.1.2"
   },
   "license": "apache",
   "main": "n/a",
