--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-google-analytics": "^3.15.0",
+    "gatsby-plugin-image": "^1.15.0",
     "gatsby-plugin-netlify": "^3.13.0-next.0",
     "gatsby-plugin-netlify-cms": "^5.15.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^4.15.0",
     "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-plugin-sharp": "^3.15.0",
     "gatsby-remark-copy-linked-files": "^4.11.0",
     "gatsby-remark-images": "^5.11.0",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -32,7 +33,7 @@
     "gatsby-theme-material-ui": "^4.13.0",
     "gatsby-transformer-json": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.15.0",
     "gatsby-transformer-toml": "^3.14.0",
     "immer": "^9.0.12",
     "js-search": "^2.0.0",
