--- a/package.json
+++ b/package.json
@@ -15,26 +15,25 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
     "bulma": "^0.9.0",
-    "gatsby": "^3.15.0",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.19",
-    "gatsby-plugin-google-analytics": "^3.15.0",
-    "gatsby-plugin-image": "^1.15.0",
-    "gatsby-plugin-netlify": "^3.13.0-next.0",
-    "gatsby-plugin-netlify-cms": "^5.15.0",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^4.15.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.15.0",
-    "gatsby-remark-copy-linked-files": "^4.11.0",
-    "gatsby-remark-images": "^5.11.0",
+    "gatsby": "^4.25.4",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-google-analytics": "^4.25.0",
+    "gatsby-plugin-image": "^2.25.0",
+    "gatsby-plugin-netlify": "^4.4.0",
+    "gatsby-plugin-netlify-cms": "^6.25.0",
+    "gatsby-plugin-purgecss": "^6.1.2",
+    "gatsby-plugin-react-helmet": "^5.25.0",
+    "gatsby-plugin-sass": "^5.25.0",
+    "gatsby-plugin-sharp": "^4.25.0",
+    "gatsby-remark-copy-linked-files": "^5.25.0",
+    "gatsby-remark-images": "^6.25.0",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-theme-material-ui": "^4.13.0",
-    "gatsby-transformer-json": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.15.0",
-    "gatsby-transformer-toml": "^3.14.0",
+    "gatsby-source-filesystem": "^4.25.0",
+    "gatsby-theme-material-ui": "^5.1.0",
+    "gatsby-transformer-json": "^4.25.0",
+    "gatsby-transformer-remark": "^5.25.1",
+    "gatsby-transformer-sharp": "^4.25.0",
+    "gatsby-transformer-toml": "^4.25.0",
     "immer": "^9.0.12",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
