--- a/package.json
+++ b/package.json
@@ -17,53 +17,56 @@
     "@mui/styles": "^5.11.9",
     "@mui/system": "^5.11.9",
     "bulma": "^0.9.0",
-    "gatsby": "^4.25.4",
+    "gatsby": "^5.6.0",
     "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-google-analytics": "^4.25.0",
-    "gatsby-plugin-image": "^2.25.0",
-    "gatsby-plugin-netlify": "^4.4.0",
-    "gatsby-plugin-netlify-cms": "^6.25.0",
-    "gatsby-plugin-purgecss": "^6.1.2",
-    "gatsby-plugin-react-helmet": "^5.25.0",
-    "gatsby-plugin-sass": "^5.25.0",
-    "gatsby-plugin-sharp": "^4.25.0",
-    "gatsby-remark-copy-linked-files": "^5.25.0",
-    "gatsby-remark-images": "^6.25.0",
+    "gatsby-plugin-google-analytics": "^5.6.0",
+    "gatsby-plugin-image": "^3.6.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-netlify-cms": "^7.6.0",
+    "gatsby-plugin-purgecss": "^6.2.1",
+    "gatsby-plugin-react-helmet": "^6.6.0",
+    "gatsby-plugin-sass": "^6.6.0",
+    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-remark-copy-linked-files": "^6.6.0",
+    "gatsby-remark-images": "^7.6.0",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^4.25.0",
-    "gatsby-theme-material-ui": "^5.1.0",
-    "gatsby-transformer-json": "^4.25.0",
-    "gatsby-transformer-remark": "^5.25.1",
-    "gatsby-transformer-sharp": "^4.25.0",
-    "gatsby-transformer-toml": "^4.25.0",
+    "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-theme-material-ui": "^5.3.0",
+    "gatsby-transformer-json": "^5.6.0",
+    "gatsby-transformer-remark": "^6.6.0",
+    "gatsby-transformer-sharp": "^5.6.0",
+    "gatsby-transformer-toml": "^5.6.0",
     "immer": "^9.0.12",
     "js-search": "^2.0.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.15.70",
-    "netlify-cms-media-library-cloudinary": "^1.3.8",
-    "netlify-cms-media-library-uploadcare": "^0.5.9",
+    "netlify-cms-app": "^2.15.72",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
+    "netlify-cms-media-library-uploadcare": "^0.5.10",
     "node-sass": "^7.0.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^6.0.0",
-    "react-image-gallery": "^1.0.8",
-    "react-lazy-load-image-component": "^1.5.0",
-    "react-markdown": "^7.1.2",
-    "react-share": "^4.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.2.11",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-markdown": "^8.0.5",
+    "react-share": "^4.4.1",
     "uuid": "^7.0.0",
     "xmlhttprequest-ssl": "^1.6.2"
   },
-  "resolutions": {
-    "react-markdown": "^7.1.2"
+  "overrides": {
+    "graphql": "^16.6.0",
+    "react": "^18.2.0",
+    "@types/react": "^18.0.28",
+    "react-dom": "^18.2.0"
   },
   "license": "apache",
   "main": "n/a",
   "scripts": {
     "clean": "gatsby clean",
     "start": "npm run develop",
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
-    "develop": "npm run clean && GATSBY_GRAPHQL_IDE=playground gatsby develop",
+    "build": "gatsby build --log-pages",
+    "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "cypress open --browser chrome --config baseUrl=http://localhost:8000/",
