Add emotion cache to fix styling for preview page in iFrame

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "repository": "github:openpracticelibrary/openpracticelibrary",
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.9",
