--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,6 @@
   publish = "public"
   command = "npm run build"
   functions = "lambda"
+  X-Frame-Options = "SAMEORIGIN"
 [build.environment]
   NODE_VERSION = "18"
