:heavy_plus_sign: Add react-reactions

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "repository": "github:openpracticelibrary/openpracticelibrary",
   "dependencies": {
+    "@charkour/react-reactions": "^0.11.0",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
